# CS180AB-Supernova

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.ec2.yml  docker-compose.yml
.github/workflows/: ci.yml
DB_Prototype/: README.md  docker-compose.yml  ingest.py  init.sql
backend/: Dockerfile  package-lock.json  package.json  requirements.txt
backend/app/: color_map.py  main.py  memory_check.py  mesh_generation.py  models.py  processing.py  routes.py  volume_export.py  websocket.py
backend/dicom-service/: Dockerfile  pyproject.toml
backend/src/: index.js
backend/tests/: jobs.test.js  test_color_map.py  test_memory_check.py  test_mesh_generation.py  test_models.py  test_processing.py  test_routes.py  test_volume_export.py  test_websocket.py
dicom_pipeline/: .gitignore  README.md  __init__.py  ct_classifier_poc.py  debug_folder.py  export_sample_slices.py  inspect_out.py  predict_model.py  requirements.txt  run_ingest.py  train_model.py  view_npy.py
dicom_pipeline/dicom_pipeline/: config.py  deid.py  dicom_io.py  ingest.py  model.py  (+2 more)
frontend/: Dockerfile  package-lock.json  package.json  vitest.config.ts
website/worktrees/supernova/backend/dicom-service/: Dockerfile  pyproject.toml
website/worktrees/supernova/backend/dicom-service/app/: anonymize.py  db.py  main.py  organ_meshes.py  processing.py  routes.py  segment_filter.py  segmentation.py
website/worktrees/supernova/backend/dicom-service/tests/: conftest.py  test_marching_cubes.py  test_organ_meshes.py  test_processing.py  test_routes.py  test_segmentation.py
(+876 files in other folders)
