[project]
name = "supernova-dicom-service"
version = "0.1.0"
description = "DICOM processing microservice for Supernova"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydicom>=2.4.0",
    "numpy>=1.26.0",
    "vtk>=9.3.0",
    "SimpleITK>=2.3.0",
    "python-multipart>=0.0.12",
    "nibabel>=5.2.0",
    "TotalSegmentator>=2.3.0",
    "torch>=2.0.0",
    "scipy>=1.12.0",
    "pymongo>=4.7.0",
    "psycopg2-binary>=2.9.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
